Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-939

[SSL] Regression: binding a transport erases the configured peer name

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • proton-0.10
    • proton-0.10
    • proton-c
    • None

    Description

      If the SSL instance is configured before binding, and no hostname has been configured for the connection to be bound, the peer hostname as configured on the SSL object is reset (no hostname set).

      To be compatible with the previous releases of proton, pn_ssl_set_peer_hostname() should take precedence over the hostname configured for the connection. e.g. the connection's hostname should be used by default, unless a hostname has been explicitly set via pn_ssl_set_peer_hostname().

      Attachments

        Activity

          People

            kgiusti Ken Giusti
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: