PROTON-939: allow pn_ssl_set_peer_hostname to override connection's hostname